--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,26 @@ jobs:
     runs-on: ubuntu-latest
     env:
         TAG_NAME: ${{ github.ref_name }}
+    strategy:
+      matrix:
+        include:
+          - os: darwin
+            arch: arm64
+            asset_name: review-mac-arm
+            asset_ext: ""
+          - os: darwin
+            arch: amd64
+            asset_name: review-mac-intel
+            asset_ext: ""
+          - os: linux
+            arch: amd64
+            asset_name: review-linux-intel
+            asset_ext: ""
+          - os: windows
+            arch: amd64
+            asset_name: review-windows
+            asset_ext: ".exe"
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -23,19 +43,11 @@ jobs:
         id: get_tag
         run: echo "TAG_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      - name: Build macOS ARM binary
-        run: GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w" -o gepetto-mac-arm-${{ env.TAG_NAME }} gepetto.go
-
-      - name: Build macOS Intel binary
-        run: GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o gepetto-mac-intel-${{ env.TAG_NAME }} gepetto.go
-
-      - name: Build Linux Intel binary
-        run: GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o gepetto-linux-intel-${{ env.TAG_NAME }} gepetto.go
-
-      - name: Build Windows binary
-        run: GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o gepetto-windows-${{ env.TAG_NAME }}.exe gepetto.go
+      - name: Build binary
+        run: GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -ldflags="-s -w" -o ${{ matrix.asset_name }}-${{ env.TAG_NAME }}${{ matrix.asset_ext }} review.go
 
       - name: Create GitHub Release
+        if: matrix.os == 'linux' && matrix.arch == 'amd64'
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -46,42 +58,12 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload macOS ARM binary
+      - name: Upload binary
         uses: actions/upload-release-asset@v1
         env:
-            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }} # Use the custom secret
-        with:
-            upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: ./gepetto-mac-arm-${{ env.TAG_NAME }}
-            asset_name: gepetto-mac-arm-${{ env.TAG_NAME }}
-            asset_content_type: application/octet-stream
-
-      - name: Upload macOS Intel binary
-        uses: actions/upload-release-asset@v1
-        env:
-            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }} # Use the custom secret
+            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./gepetto-mac-intel-${{ env.TAG_NAME }}
-          asset_name: gepetto-mac-intel-${{ env.TAG_NAME }}
-          asset_content_type: application/octet-stream
-
-      - name: Upload Linux Intel binary
-        uses: actions/upload-release-asset@v1
-        env:
-            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }} # Use the custom secret
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./gepetto-linux-intel-${{ env.TAG_NAME }}
-          asset_name: gepetto-linux-intel-${{ env.TAG_NAME }}
-          asset_content_type: application/octet-stream
-
-      - name: Upload Windows binary
-        uses: actions/upload-release-asset@v1
-        env:
-            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }} # Use the custom secret
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./gepetto-windows-${{ env.TAG_NAME }}.exe
-          asset_name: gepetto-windows-${{ env.TAG_NAME }}.exe
+          asset_path: ./{{ matrix.asset_name }}-${{ env.TAG_NAME }}${{ matrix.asset_ext }}
+          asset_name: ${{ matrix.asset_name }}-${{ env.TAG_NAME }}${{ matrix.asset_ext }}
           asset_content_type: application/octet-stream
