--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,6 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./{{ matrix.asset_name }}-${{ env.TAG_NAME }}${{ matrix.asset_ext }}
+          asset_path: ./${{ matrix.asset_name }}-${{ env.TAG_NAME }}${{ matrix.asset_ext }}
           asset_name: ${{ matrix.asset_name }}-${{ env.TAG_NAME }}${{ matrix.asset_ext }}
           asset_content_type: application/octet-stream
